<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/local_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/local_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorPrimaryDark">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_single" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_artist" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_album" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_folder" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>