<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/music_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/music_tablayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabBackground="@color/colorPrimaryDark"
            app:tabIndicatorColor="@color/colorPrimaryDark">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_category" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_local" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/music_bottom_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/main_cover"
            android:layout_width="@dimen/bottom_cover_size"
            android:layout_height="@dimen/bottom_cover_size"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/main_cover_description"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:id="@+id/main_bottom_slide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/songname_hint"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/songauthor_hint"
                android:importantForAutofill="no"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/main_pause_button"
            android:layout_width="@dimen/bottom_pause_size"
            android:layout_height="@dimen/bottom_pause_size"
            android:background="@color/colorPrimaryDark"
            android:src="@android:drawable/ic_media_play" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>